--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -47,6 +47,7 @@
         android:id="@+id/btn1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="choiceAns"
         android:text="fox"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btn2"
@@ -58,6 +59,7 @@
         android:id="@+id/btn2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="choiceAns"
         android:text="brid"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn1"
         app:layout_constraintEnd_toStartOf="@+id/btn3"
@@ -68,6 +70,7 @@
         android:id="@+id/btn3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="choiceAns"
         android:text="cat"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn2"
         app:layout_constraintEnd_toStartOf="@+id/btn4"
@@ -78,6 +81,7 @@
         android:id="@+id/btn4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="choiceAns"
         android:text="dog"
         app:layout_constraintBaseline_toBaselineOf="@+id/btn3"
         app:layout_constraintEnd_toEndOf="parent"
